fix image paths

--- a/css/styles.css
+++ b/css/styles.css
@@ -10,7 +10,7 @@ YOUR STYLES
 }
 
 .head {
-    background-image: url("/img/img2.jpg");
+    background-image: url("/pitch/img/img2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     flex: 1 1 auto;
