--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,15 @@
-/********************
-YOUR STYLES
-*******************/
+/*my styles*/
 
 /*animations for loading*/
+
+@-webkit-keyframes fade {
+    from { 
+        opacity: 0;
+    }
+    to { 
+        opacity: 1;
+    }
+}
 
 @keyframes fade {
     from { 
@@ -13,12 +20,27 @@ YOUR STYLES
     }
 }
 
-@keyframes slideLeft {
+@-webkit-keyframes slideLeft {
     from { 
+        -webkit-transform: translateX(600px); 
         transform: translateX(600px);
         opacity: 0;
     }
     to { 
+        -webkit-transform: translateX(0); 
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideLeft {
+    from { 
+        -webkit-transform: translateX(600px); 
+        transform: translateX(600px);
+        opacity: 0;
+    }
+    to { 
+        -webkit-transform: translateX(0); 
         transform: translateX(0);
         opacity: 1;
     }
@@ -30,20 +52,32 @@ YOUR STYLES
     position: absolute;
     width: 100%;
     height: 100%;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .head {
     background-image: url("http://rottingroom.github.io/pitch/img/img2.jpg");
+    background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 1 auto;
+    -ms-flex: 1 1 auto;
     flex: 1 1 auto;
+    -webkit-animation: fade 6s;
     animation: fade 6s;
 }
 
 .sidebar {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 400px;
+    -ms-flex: 0 0 400px;
     flex: 0 0 400px;
     padding: 50px;
+    -webkit-animation: slideLeft .7s;
     animation: slideLeft .7s;
 }
 
@@ -61,10 +95,12 @@ YOUR STYLES
     height: 40px;
     border-radius: 250px;
     margin-right: 22px;
+    margin-bottom: 15px;
 }
 
 svg {
     margin-top: 15px;
+    margin-bottom: 15px;
     height: 40px;
     width: 40px;
     fill: #1F788C;
@@ -109,7 +145,9 @@ li {
 a:hover svg,
 a:hover #logo {
     fill: #D9593D;
+    -webkit-transform: scale(1.1);
     transform: scale(1.1);
+    -webkit-transition: all .3s;
     transition: all .3s;
 }
 
@@ -117,25 +155,36 @@ a:hover #logo {
     font-size: 50px;
 }
 
-/********************
-MEDIA QUERIES
-*******************/
+/*media queries*/
 
 
 @media (max-width: 1300px) {
     
     .bigwrapper {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -webkit-flex-direction: column;
+        -ms-flex-direction: column;
         flex-direction: column;
     }
     
     .head {
+        -webkit-box-flex: 0;
+        -webkit-flex: 0 0 500px;
+        -ms-flex: 0 0 500px;
         flex: 0 0 500px;
     }
     
     .sidebar {
+        -webkit-align-content: center;
+        -ms-flex-line-pack: center;
         align-content: center;
         text-align: center;
         margin: 0 15% 0 15%;
+        padding-top: 0;
+        -webkit-box-flex: 1;
+        -webkit-flex: 1 1 auto;
+        -ms-flex: 1 1 auto;
         flex: 1 1 auto
     }
 
@@ -146,6 +195,20 @@ MEDIA QUERIES
     .sidebar {
         text-align: left;
         margin: 0 5% 0 5%;
+    }
+    
+    button {
+        margin-bottom: 10px;
+    }
+    
+}
+
+@media (max-width: 500px) {
+
+    .sidebar {
+        text-align: left;
+        margin: 0 5% 0 5%;
+        padding: 0;
     }
     
     button {
